--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,11 +1,9 @@
 <h2>New Product</h2>
-<!-- consider a partial for the form -->
 
-<%= form_for(@product) %>
+<%= form_for(@product) do |f| %>
   Name: <%= f.text_field :name %><br>
   Price: <%= f.text_field :price %><br>
   Description: <%= f.text_area :description %><br>
-  <!-- include inventory? -->
   Inventory:<%= f.text_field :inventory %><br>
 
   <%= f.submit %>
